# mastodon-status-bot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml
src/: config.rs  log.rs  main.rs  template.rs
